--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechStock - Inventory & Sales Management</title>
-    <meta name="description" content="Modern inventory and sales management system for tech businesses. Track stock, manage sales, and generate reports." />
-    <meta name="author" content="TechStock" />
+    <title>Glen's FiberLine Network & Resolution - Inventory & Sales Management</title>
+    <meta name="description" content="Inventory and sales management for Glen's FiberLine Network & Resolution. Track stock, manage sales, and generate reports." />
+    <meta name="author" content="Glen's FiberLine Network & Resolution" />
 
-    <meta property="og:title" content="TechStock - Inventory & Sales Management" />
-    <meta property="og:description" content="Modern inventory and sales management system for tech businesses" />
+    <meta property="og:title" content="Glen's FiberLine Network & Resolution - Inventory & Sales Management" />
+    <meta property="og:description" content="Inventory and sales management for Glen's FiberLine Network & Resolution" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@TechStock" />
+    <meta name="twitter:site" content="@GlenFiberLine" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Favicon: uses /logo.png (replace with /favicon.ico if you prefer .ico file) -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+    <link rel="shortcut icon" href="/logo.png" />
   </head>
 
   <body>
